# AM_AT1_Perceptron

./: README.md  main.py  pyproject.toml
data/raw/: MCD.csv  eventos.csv
notebooks/: AT1_Perceptron.ipynb
